Bug 218616 - konsole "Copy Input To" not working properly with multiple windows
Summary: konsole "Copy Input To" not working properly with multiple windows
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-14 10:09 UTC by Thomas Dreibholz
Modified: 2009-12-29 04:59 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Dreibholz 2009-12-14 10:09:17 UTC
Version:           SVN Revision 1062216 (using Devel)
Compiler:          gcc 4.4.1 
OS:                Linux
Installed from:    Compiled sources

The "Copy Input To" function does not work properly when there are two or more Konsole windows opened. This bug can be reproduced by opening two Konsole windows with multiple tabs. Activating "Copy Input To ... -> All Tabs in Current Window" may work in a tab of the second window, while it does not work in a tab of the first window.

I have created a patch to fix the bug:
http://reviewboard.kde.org/r/2375/
Comment 1 Kurt Hindenburg 2009-12-29 04:59:15 UTC
SVN commit 1067166 by hindenburg:

Fix issue where 'Copy Input To' doesn't work for multiple windows.

Patch by Thomas Dreibholz

BUG: 218616


 M  +10 -74    Session.cpp  
 M  +0 -3      Session.h  
 M  +14 -11    SessionController.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1067166