Fix issue where 'Copy Input To' doesn't work for multiple windows.

Patch by Thomas Dreibholz

BUG: 218616

svn path=/trunk/KDE/kdebase/apps/konsole/; revision=1067166